--- a/1.html
+++ b/1.html
@@ -10,5 +10,6 @@
     <p>This is a basic HTML</p>
     
     <img src="C:\Users\vadth\Downloads\project\res\Screenshot 2023-08-08 093247.png">
+	<p>IMAGE</p>
 </body>
 </html>
